feat: french lang support | merchant-tablet-ionic

--- a/packages/merchant-tablet-ionic/src/pages/+warehouse/create-product-type-popup/create-product-type-popup.html
+++ b/packages/merchant-tablet-ionic/src/pages/+warehouse/create-product-type-popup/create-product-type-popup.html
@@ -10,25 +10,17 @@
 		<div class="col popup-half">
 			<div class="title-popup popup-input-container">
 				<label>
-					<span class="popup-input-description"
-						>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.TITLE' |
-						translate }}</span
-					>
+					<span class="popup-input-description">{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.TITLE' |
+						translate }}</span>
 					<input class="popup-input" [(ngModel)]="productTitle" />
 				</label>
 			</div>
 
 			<div class="popup-input-container">
 				<label>
-					<span class="popup-input-description"
-						>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.DESCRIPTION' |
-						translate }}</span
-					>
-					<textarea
-						class="popup-input"
-						rows="4"
-						[(ngModel)]="productDescription"
-					></textarea>
+					<span class="popup-input-description">{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.DESCRIPTION' |
+						translate }}</span>
+					<textarea class="popup-input" rows="4" [(ngModel)]="productDescription"></textarea>
 				</label>
 			</div>
 
@@ -39,17 +31,9 @@
 						translate }}
 					</span>
 					<ion-item id="multiple-select">
-						<ion-select
-							[(ngModel)]="selectedProductCategories"
-							multiple="true"
-							[interfaceOptions]="selectOptionTitle"
-							[okText]="buttonOK"
-							[cancelText]="buttonCancel"
-						>
-							<ion-select-option
-								[value]="category.id"
-								*ngFor="let category of productsCategories"
-							>
+						<ion-select [(ngModel)]="selectedProductCategories" multiple="true"
+							[interfaceOptions]="selectOptionTitle" [okText]="buttonOK" [cancelText]="buttonCancel">
+							<ion-select-option [value]="category.id" *ngFor="let category of productsCategories">
 								{{ localeTranslateService.getTranslate(
 								category.name ) }}
 							</ion-select-option>
@@ -62,16 +46,10 @@
 				<div class="col no-padding-left pl-0 pr-0">
 					<div class="popup-input-container">
 						<label>
-							<span class="popup-input-description"
-								>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.PRICE'
-								| translate }}</span
-							>
-							<input
-								class="popup-input"
-								type="number"
-								placeholder="$"
-								[(ngModel)]="warehouseProductCreateObject.price"
-							/>
+							<span class="popup-input-description">{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.PRICE'
+								| translate }}</span>
+							<input class="popup-input" type="number" placeholder="$"
+								[(ngModel)]="warehouseProductCreateObject.price" />
 						</label>
 					</div>
 				</div>
@@ -79,23 +57,15 @@
 				<div class="col no-padding-right">
 					<div class="popup-input-container">
 						<label>
-							<span class="popup-input-description"
-								>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.COUNT'
+							<span class="popup-input-description">{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.COUNT'
 								| translate }} ({{
 								'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.OPTIONAL'
-								| translate }})</span
-							>
-							<input
-								class="popup-input"
-								type="number"
-								oninput="validity.valid||(value='');"
-								min="0"
+								| translate }})</span>
+							<input class="popup-input" type="number" oninput="validity.valid||(value='');" min="0"
 								placeholder="{{
 									'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.COUNT_PLACEHOLDER'
 										| translate
-								}}"
-								[(ngModel)]="warehouseProductCreateObject.count"
-							/>
+								}}" [(ngModel)]="warehouseProductCreateObject.count" />
 						</label>
 					</div>
 				</div>
@@ -103,35 +73,25 @@
 				<div class="col no-padding-right pr-0">
 					<div class="popup-input-container">
 						<label>
-							<span class="popup-input-description"
-								>{{
+							<span class="popup-input-description">{{
 								'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.LANGUAGE'
-								| translate }}</span
-							>
-							<select
-								class="popup-input select"
-								[(ngModel)]="currentLocale"
-							>
-								<option value="en-US"
-									>{{
+								| translate }}</span>
+							<select class="popup-input select" [(ngModel)]="currentLocale">
+								<option value="en-US">{{
 									'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.ENGLISH'
-									| translate }}</option
-								>
-								<option value="he-IL"
-									>{{
+									| translate }}</option>
+								<option value="he-IL">{{
 									'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.HEBREW'
-									| translate }}</option
-								>
-								<option value="ru-RU"
-									>{{
+									| translate }}</option>
+								<option value="ru-RU">{{
 									'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.RUSSIAN'
-									| translate }}</option
-								>
-								<option value="bg-BG"
-									>{{
+									| translate }}</option>
+								<option value="bg-BG">{{
 									'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.BULGARIAN'
-									| translate }}</option
-								>
+									| translate }}</option>
+								<option value="bg-BG">{{
+									'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.FRENCH'
+									| translate }}</option>
 							</select>
 						</label>
 					</div>
@@ -141,42 +101,27 @@
 			<ion-row class="row getProductType">
 				<ion-col class="pl-0 col-6">
 					<ion-item class="coord-box">
-						<ion-checkbox
-							class="mr-3"
-							[(ngModel)]="takaProductDelivery"
-							(ionChange)="getProductTypeChange('Delivery')"
-						></ion-checkbox>
-						<ion-label
-							>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.DELIVERY'
-							| translate }}</ion-label
-						>
+						<ion-checkbox class="mr-3" [(ngModel)]="takaProductDelivery"
+							(ionChange)="getProductTypeChange('Delivery')"></ion-checkbox>
+						<ion-label>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.DELIVERY'
+							| translate }}</ion-label>
 					</ion-item>
 				</ion-col>
 				<ion-col class="pl-0 col-6">
 					<ion-item class="coord-box">
-						<ion-checkbox
-							class="mr-3"
-							[(ngModel)]="takaProductTakeaway"
-							(ionChange)="getProductTypeChange('Takeaway')"
-						></ion-checkbox>
-						<ion-label
-							>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.TAKEAWAY'
-							| translate }}</ion-label
-						>
+						<ion-checkbox class="mr-3" [(ngModel)]="takaProductTakeaway"
+							(ionChange)="getProductTypeChange('Takeaway')"></ion-checkbox>
+						<ion-label>{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.TAKEAWAY'
+							| translate }}</ion-label>
 					</ion-item>
 				</ion-col>
 			</ion-row>
 		</div>
 
 		<div ng2FileDrop [uploader]="uploader" class="col popup-half">
-			<div
-				ngf-select="imageSelected($file)"
-				ngf-pattern="'image/*'"
-				class="upload-button {{ hasImage ? 'items-center' : '' }}"
-				#imageHolder
-				id="image-holder"
-				(click)="hasImage && showPicturesPopup()"
-			>
+			<div ngf-select="imageSelected($file)" ngf-pattern="'image/*'"
+				class="upload-button {{ hasImage ? 'items-center' : '' }}" #imageHolder id="image-holder"
+				(click)="hasImage && showPicturesPopup()">
 				<h6 *ngIf="isBrowser && !hasImage" class="dragDrop">
 					{{
 					'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.DRAG&DROP_PICTURE_HERE'
@@ -184,21 +129,12 @@
 					<br />
 				</h6>
 
-				<input
-					*ngIf="!hasImage"
-					type="file"
-					(change)="imageUrlChanged($event)"
-					id="fileInput"
-					ng2FileSelect
-					[uploader]="uploader"
-				/>
+				<input *ngIf="!hasImage" type="file" (change)="imageUrlChanged($event)" id="fileInput" ng2FileSelect
+					[uploader]="uploader" />
 
 				<label *ngIf="!isBrowser">
-					<ion-icon
-						(click)="!hasImage && presentActionSheet()"
-						class="upload-icon"
-						name="{{ hasImage ? 'images' : 'cloud-upload' }}"
-					></ion-icon>
+					<ion-icon (click)="!hasImage && presentActionSheet()" class="upload-icon"
+						name="{{ hasImage ? 'images' : 'cloud-upload' }}"></ion-icon>
 					<h3 class="upload-text">
 						{{ hasImage ? 'Click to Upload More Pictures' :
 						('WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.CLICK_TO_UPLOAD_PICTURE'
@@ -206,10 +142,7 @@
 					</h3>
 				</label>
 				<label *ngIf="isBrowser" for="fileInput">
-					<ion-icon
-						class="upload-icon"
-						name="{{ hasImage ? 'images' : 'cloud-upload' }}"
-					></ion-icon>
+					<ion-icon class="upload-icon" name="{{ hasImage ? 'images' : 'cloud-upload' }}"></ion-icon>
 					<h3 class="upload-text">
 						{{ hasImage ?
 						('WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.CLICK_TO_UPLOAD_MORE_PICTURE'
@@ -226,11 +159,7 @@
 					}}
 				</button>
 
-				<button
-					class="button button-brand"
-					[disabled]="!isReadyToCreate"
-					(click)="createProduct()"
-				>
+				<button class="button button-brand" [disabled]="!isReadyToCreate" (click)="createProduct()">
 					{{ 'WAREHOUSE_VIEW.CREATE_PRODUCTS_POPUP.CREATE' | translate
 					}}
 				</button>
